[gd_scene load_steps=22 format=2]

[ext_resource path="res://source/maps/SmileyMinigame/SmileyMinigame.gd" type="Script" id=1]
[ext_resource path="res://source/environments/SmileyMinigameEnvironment.tres" type="Environment" id=2]
[ext_resource path="res://source/materials/floor1_1.tres" type="Material" id=3]
[ext_resource path="res://source/player/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://source/JumpBoost/JumpBoost.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/fonts/PressStart2P-Regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://assets/images/custom/wall1/sprite_5.png" type="Texture" id=7]
[ext_resource path="res://assets/images/custom/wall1/sprite_1.png" type="Texture" id=8]
[ext_resource path="res://assets/images/custom/wall1/sprite_3.png" type="Texture" id=9]
[ext_resource path="res://assets/images/custom/wall1/sprite_2.png" type="Texture" id=10]
[ext_resource path="res://assets/images/custom/wall1/sprite_4.png" type="Texture" id=11]
[ext_resource path="res://assets/images/custom/wall1/sprite_0.png" type="Texture" id=12]
[ext_resource path="res://source/speedboost/SpeedBoost.tscn" type="PackedScene" id=13]
[ext_resource path="res://source/materials/wall1_1.tres" type="Material" id=14]

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 1, 0, 1, 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 1, 0, 1, 1 )

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 6 )

[sub_resource type="AnimatedTexture" id=9]
flags = 19
frames = 6
fps = 2.0
frame_0/texture = ExtResource( 12 )
frame_1/texture = ExtResource( 8 )
frame_1/delay_sec = 0.0
frame_2/texture = ExtResource( 10 )
frame_2/delay_sec = 0.0
frame_3/texture = ExtResource( 9 )
frame_3/delay_sec = 0.0
frame_4/texture = ExtResource( 11 )
frame_4/delay_sec = 0.0
frame_5/texture = ExtResource( 7 )
frame_5/delay_sec = 0.0

[sub_resource type="SpatialMaterial" id=10]
flags_world_triplanar = true
albedo_color = Color( 1, 0.819608, 0, 1 )
albedo_texture = SubResource( 9 )
emission_enabled = true
emission = Color( 1, 1, 1, 1 )
emission_energy = 0.0
emission_operator = 0
emission_on_uv2 = false
uv1_scale = Vector3( 0.5, 0.5, 0.5 )
uv1_triplanar = true

[sub_resource type="CylinderMesh" id=11]
material = SubResource( 10 )
top_radius = 12.0
bottom_radius = 80.0
height = 20.0
radial_segments = 4

[sub_resource type="DynamicFont" id=12]
size = 56
font_data = ExtResource( 6 )

[node name="SmileyMinigame" type="Spatial"]
script = ExtResource( 1 )

[node name="ProgressBar" type="ProgressBar" parent="."]
margin_left = 152.0
margin_top = 16.0
margin_right = 872.0
margin_bottom = 40.0
custom_styles/fg = SubResource( 6 )
custom_styles/bg = SubResource( 7 )
value = 50.0
percent_visible = false

[node name="LevelLabel" type="Label" parent="."]
margin_left = 152.0
margin_top = 16.0
margin_right = 872.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 8 )
text = "Level: 0"
align = 1
valign = 1

[node name="CreateTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="SpawnPosition" type="Position3D" parent="."]

[node name="Smileys" type="Spatial" parent="."]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource( 2 )

[node name="Player" parent="." instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -28.7, -4 )

[node name="CSGBox" type="CSGBox" parent="."]
use_collision = true
collision_layer = 3
collision_mask = 3
invert_faces = true
width = 200.0
height = 100.0
depth = 200.0
material = ExtResource( 3 )

[node name="JumpBoost" parent="." instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -28.45, 0 )
jump_multiplier = 5

[node name="JumpBoost2" parent="." instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 70, -49.895, 0 )
jump_multiplier = 5

[node name="JumpBoost3" parent="." instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -70, -49.895, 0 )
jump_multiplier = 5

[node name="JumpBoost4" parent="." instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -49.895, 70 )
jump_multiplier = 5

[node name="JumpBoost5" parent="." instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 70, -49.895, 70 )
jump_multiplier = 5

[node name="JumpBoost6" parent="." instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -70, -49.895, 70 )
jump_multiplier = 5

[node name="JumpBoost7" parent="." instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -49.895, -70 )
jump_multiplier = 5

[node name="JumpBoost8" parent="." instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 70, -49.895, -70 )
jump_multiplier = 5

[node name="JumpBoost9" parent="." instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -70, -49.895, -70 )
jump_multiplier = 5

[node name="CSGMesh" type="CSGMesh" parent="."]
transform = Transform( 0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, 0.707107, 0, -40, 0 )
use_collision = true
collision_layer = 3
collision_mask = 3
mesh = SubResource( 11 )

[node name="SpeedBoost" parent="." instance=ExtResource( 13 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -50, 60 )

[node name="SpeedBoost2" parent="." instance=ExtResource( 13 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 60, -50, 0 )

[node name="SpeedBoost3" parent="." instance=ExtResource( 13 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -50, -60 )

[node name="SpeedBoost4" parent="." instance=ExtResource( 13 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -60, -50, 0 )

[node name="SpeedBoost5" parent="." instance=ExtResource( 13 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 84, 12, -84 )

[node name="CSGBox2" type="CSGBox" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 90, 11, -90 )
use_collision = true
collision_layer = 3
collision_mask = 3
width = 20.0
depth = 20.0
material = ExtResource( 14 )

[node name="SpeedBoost6" parent="." instance=ExtResource( 13 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -84, 12, -84 )

[node name="CSGBox3" type="CSGBox" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -90, 11, -90 )
use_collision = true
collision_layer = 3
collision_mask = 3
width = 20.0
depth = 20.0
material = ExtResource( 14 )

[node name="SpeedBoost7" parent="." instance=ExtResource( 13 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -84, 12, 84 )

[node name="CSGBox4" type="CSGBox" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -90, 11, 90 )
use_collision = true
collision_layer = 3
collision_mask = 3
width = 20.0
depth = 20.0
material = ExtResource( 14 )

[node name="SpeedBoost8" parent="." instance=ExtResource( 13 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 84, 12, 84 )

[node name="CSGBox5" type="CSGBox" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 90, 11, 90 )
use_collision = true
collision_layer = 3
collision_mask = 3
width = 20.0
depth = 20.0
material = ExtResource( 14 )

[node name="Label3D3" type="Label3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -27.6, -17.4 )
text = "Press G to exit"
font = SubResource( 12 )

[connection signal="timeout" from="CreateTimer" to="." method="_on_CreateTimer_timeout"]
